--- a/src/app/blog/posts/blog.mdx
+++ b/src/app/blog/posts/blog.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Create, edit and delete blog posts"
-summary: "Create, edit and delete posts in the blog section of your Magic Portfolio."
+summary: "Create, edit and delete posts in the blog section of your Geromes Portfolio."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Manage posts
