--- a/src/app/blog/posts/content.mdx
+++ b/src/app/blog/posts/content.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Updating the content of Magic Portfolio"
+title: "Updating the content of Geromes Portfolio"
 summary: "Personalize the portfolio template with your own content."
 publishedAt: "2025-04-24"
 tag: "Portfolio"
@@ -80,7 +80,7 @@ Social links are rendered on the `/about` page and in the footer based on the ar
     {
       name: "Email",
       icon: "email",
-      link: "mailto:lorant@once-ui.com",
+      link: "mailto:gerome.e24@gmail.com",
     },
 ];`,
     language: "tsx",
