--- a/src/app/blog/posts/work.mdx
+++ b/src/app/blog/posts/work.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Create,edit and delete projects"
-summary: "Create, edit and delete projects in the work section of your Magic Portfolio."
+summary: "Create, edit and delete projects in the work section of your Geromes Portfolio."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Manage projects
