--- a/src/app/blog/posts/mailchimp.mdx
+++ b/src/app/blog/posts/mailchimp.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Set up Mailchimp and collect emails"
-summary: "Set up the Mailchimp newsletter block for your Magic Portfolio."
+summary: "Set up the Mailchimp newsletter block for your Geromes Portfolio."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Mailchimp account
@@ -11,7 +11,7 @@ Sign up for a [Mailchimp account](https://mailchimp.com) and create a new list i
 
 ## Embed form
 
-Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-website/) and copy the form URL to your Magic Portfolio config.
+Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-website/) and copy the form URL to your Geromes Portfolio config.
 
 <CodeBlock
     highlight="2"
