--- a/src/app/blog/posts/pages.mdx
+++ b/src/app/blog/posts/pages.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Enable or disable pages for your portfolio"
-summary: "Magic Portfolio's RouteGuard component takes care of conditionally rendering pages based on your settings."
+summary: "Geromes Portfolio's RouteGuard component takes care of conditionally rendering pages based on your settings."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Enable or disable pages
 
-Magic Portfolio's `RouteGuard` component takes care of conditionally rendering pages based on the `routes` object in the `resources/config.js` file.
+Geromes Portfolio's `RouteGuard` component takes care of conditionally rendering pages based on the `routes` object in the `resources/config.js` file.
 
 <CodeBlock
     marginBottom="16"
