--- a/src/app/blog/posts/password.mdx
+++ b/src/app/blog/posts/password.mdx
@@ -2,7 +2,7 @@
 title: "Create password protected pages"
 summary: "Create password protected pages through the RouteGuard component."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Add protected pages
