--- a/src/app/blog/posts/seo.mdx
+++ b/src/app/blog/posts/seo.mdx
@@ -1,17 +1,17 @@
 ---
-title: "SEO settings for Magic Portfolio"
-summary: "Manage your Magic Portfolio's SEO settings."
+title: "SEO settings for Geromes Portfolio"
+summary: "Manage your Geromes Portfolio's SEO settings."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Meta tags
 
-Magic Portfolio automatically generates meta- and open graph tags for your pages based on the `content.js` file.
+Geromes Portfolio automatically generates meta- and open graph tags for your pages based on the `content.js` file.
 
 ## Schema
 
-Magic Portfolio automatically generates schema tags for your pages based on the `content.js` file.
+Geromes Portfolio automatically generates schema tags for your pages based on the `content.js` file.
 
 ## Open Graph image
 
