--- a/src/app/blog/posts/styling.mdx
+++ b/src/app/blog/posts/styling.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Styling your portfolio"
-summary: "Magic Portfolio's styling is based on Once UI's customization through data-attributes."
+summary: "Geromes Portfolio's styling is based on Once UI's customization through data-attributes."
 publishedAt: "2025-04-24"
-tag: "Magic Portfolio"
+tag: "Geromes Portfolio"
 ---
 
 ## Global style
 
-Magic Portfolio's styling is based on Once UI's customization through data-attributes. You can generate a custom color palette for brand, accent and neutral colors on [Once UI](https://once-ui.com/customize) where you'll find instructions on how to apply it.
+Geromes Portfolio's styling is based on Once UI's customization through data-attributes. You can generate a custom color palette for brand, accent and neutral colors on [Once UI](https://once-ui.com/customize) where you'll find instructions on how to apply it.
 
 <CodeBlock
     marginBottom="16"
