resume download section added

--- a/src/app/blog/posts/components.mdx
+++ b/src/app/blog/posts/components.mdx
@@ -32,7 +32,7 @@ The feedback component is used to display critical information to visitors.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/feedback" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/feedback" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -84,7 +84,7 @@ Tables are used to display data in a structured format.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button disabled weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button disabled weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -128,7 +128,7 @@ console.log(greeting('World'));
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/codeBlock" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/codeBlock" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -160,7 +160,7 @@ The `InlineCode` is another Once UI component that you can access either through
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/inlineCode" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/inlineCode" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -215,7 +215,7 @@ Accordions are used to toggle between hiding and showing content.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/accordion" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/accordion" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -248,7 +248,7 @@ Buttons are used to trigger actions or navigate to other pages.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/button" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/button" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -308,7 +308,7 @@ Cards are used to group related content and actions.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/card" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/card" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -346,7 +346,7 @@ Icons are used to visually represent actions, objects, or concepts. For instruct
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/icon" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/icon" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -417,7 +417,7 @@ The Flex component is accessible as `Column` and `Row` and can handle a wide ran
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/flex" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/flex" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -490,7 +490,7 @@ Use the grid to construct responsive grid layouts. It can be styled similarly to
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/grid" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/grid" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -520,7 +520,7 @@ SmartImage provides an optimized way to display images. Access it with the `Smar
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -547,7 +547,7 @@ You can also use it to embed YouTube videos.
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/smartImage" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
@@ -574,13 +574,13 @@ SmartLink provides an enhanced way to link to internal and external resources. Y
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://once-ui.com/docs/smart-link" weight="default" label="View on Once UI" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://once-ui.com/docs/smart-link" weight="default" label="View more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
 ## Custom components
 
-Since Geromes Portfolio is based on Once UI, you can use all the components provided by Once UI in the `.mdx` files, but you need to import them first in the `src/product/mdx.tsx` file and pass it to the `components` object.
+Since Geromes Portfolio is based on once-ui you can use all the components provided by Once UI in the `.mdx` files, but you need to import them first in the `src/product/mdx.tsx` file and pass it to the `components` object.
 
 <CodeBlock
     marginBottom="16" marginTop="8"
