--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Automating Design Handovers with a Figma to Code Pipeline"
+title: "Automating AI Applications & Integrating Design Systems"
 publishedAt: "2025-04-24"
 summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
 images:
