--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Building Once UI, a Customizable Design System"
+title: "Building a Customizable Design Systems"
 publishedAt: "2025-04-24"
 summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
 images:
@@ -11,11 +11,7 @@ team:
   - name: "Gerome Elassaad"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+    linkedIn: "https://www.linkedin.com/"
 ---
 
 ## Overview
@@ -26,13 +22,13 @@ Development of a flexible and highly customizable design system using Next.js fo
 
 - **Component Library**: Built a set of modular, reusable UI components using React and styled-components in Next.js, focusing on accessibility and responsiveness.
 - **Theming and Customization**: Integrated a theming system that allows easy switching and customization of color palettes, typography, and layout styles using CSS variables and Figma tokens.
-- **Figma Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
+- **AI Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
 - **Documentation and Usage Guidelines**: Developed comprehensive documentation with Storybook to showcase components, usage patterns, and best practices, ensuring the design system is easy to adopt by other teams.
 
 ## Technologies Used
 
 - **Next.js**: For fast, server-rendered React applications.
-- **Figma**: For creating and managing design assets and prototypes.
+- **OpenAI**: Implementing AI for automating features.
 - **Styled-Components**: For styling React components with a modular, themable approach.
 - **Storybook**: For building an interactive, documented component library.
 
