--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Once UI: Open-source design system"
+title: "Implementing Frontend Code With Serverless Backends"
 publishedAt: "2025-04-24"
 images:
   - "/images/projects/project-01/cover-04.jpg"
