implemented correct error handling

--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Building a Customizable Design Systems"
+title: "DeepRankAI an AI Automated Blog Post Generator"
 publishedAt: "2025-04-24"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
+summary: "This AI writer helps you identify SEO gaps, conduct keyword research, generate content, and optimize—all integrated with rank tracking."
 images:
   - "/images/projects/project-01/cover-01.jpg"
   - "/images/projects/project-01/cover-02.jpg"
