re-structered the design

--- a/src/app/blog/posts/work.mdx
+++ b/src/app/blog/posts/work.mdx
@@ -26,11 +26,10 @@ images:
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/image-03.jpg"
 team:
-  - name: "Lorant One"
+  - name: "Gerome Elassaad"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-link: "https://once-ui.com/"
+    linkedIn: "https://www.linkedin.com/"
 ---`,
         language: "tsx",
         label: "src/app/work/projects/project-1.mdx"
