--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -3,14 +3,13 @@ title: "Automating AI Applications & Integrating Design Systems"
 publishedAt: "2025-04-24"
 summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
 images:
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
+  - "/images/projects/project-01/cover-02.png"
 team:
   - name: "Gerome Elassaad"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
     linkedIn: "https://www.linkedin.com/"
-link: "https://once-ui.com/"
+link: "https://deeprankai.com/"
 ---
 
 ## Overview
