re-structered projects

--- a/src/app/blog/posts/pages.mdx
+++ b/src/app/blog/posts/pages.mdx
@@ -17,7 +17,7 @@ Geromes Portfolio's `RouteGuard` component takes care of conditionally rendering
     code:
 `const routes = {
     '/':        true,
-    '/about':   true,
+    '/projects':   true,
     '/work':    true,
     '/blog':    true,
     '/gallery': false,
@@ -41,7 +41,7 @@ When creating a new page, it needs to be added to the `routes` object in the `re
     code:
 `const routes = {
     '/':        true,
-    '/about':   true,
+    '/projects':   true,
     '/work':    true,
     '/blog':    true,
     '/gallery': false,
