--- a/src/app/blog/posts/quick-start.mdx
+++ b/src/app/blog/posts/quick-start.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quick start with Geromes Portfolio"
-summary: "Geromes Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfolio template built with Once UI and Next.js."
+summary: "Geromes Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfolio template built with Next.js."
 image: "/images/og/home.jpg"
 publishedAt: "2025-04-24"
 tag: "Geromes Portfolio"
@@ -8,7 +8,7 @@ tag: "Geromes Portfolio"
 
 ## About
 
-Geromes Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfolio template built with Once UI and Next.js.
+Geromes Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfolio template built with Tailwind, Vercel and Next.js.
 
 ## License
 
