--- a/src/app/blog/posts/work.mdx
+++ b/src/app/blog/posts/work.mdx
@@ -21,7 +21,7 @@ The frontmatter is used to set the project's metadata: title, description, image
 `---
 title: "Developing a design system for indie creators"
 publishedAt: "2025-04-24"
-summary: "Once UI is a design system that empowers indie creators, small teams, and startups to build web applications."
+summary: "This is a design system that empowers indie creators, small teams, and startups to build web applications."
 images:
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/image-03.jpg"
@@ -39,7 +39,7 @@ team:
 
 ## MDX syntax
 
-You can use MDX to write the content of your projects. It helps you write rich and dynamic content with minimal code. Some MDX elements will be automatically transformed to Once UI components to integrate better in the design and add additional functionality.
+You can use MDX to write the content of your projects. It helps you write rich and dynamic content with minimal code. Some MDX elements will be automatically transformed to MDX components to integrate better in the design and add additional functionality.
 
 ## Custom components
 
