--- a/src/app/blog/posts/blog.mdx
+++ b/src/app/blog/posts/blog.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Create, edit and delete blog posts"
+title: "Technical Blog To Help You Create Your Own Portfolio"
 summary: "Create, edit and delete posts in the blog section of your Geromes Portfolio."
 publishedAt: "2025-04-24"
 tag: "Geromes Portfolio"
