--- a/src/app/blog/posts/content.mdx
+++ b/src/app/blog/posts/content.mdx
@@ -104,7 +104,7 @@ Each page have it's own object that manages the personalized content, such as he
     headline: <>Software Engineer and builder</>,
     subline: (
       <>
-        I am Gerome, a Software Engineer at <InlineCode>FLY</InlineCode>, where I craft intuitive
+        I am Gerome, a Software Engineer at <InlineCode>DeepRankAI</InlineCode>, where I craft intuitive
         <br /> user experiences. After hours, I build my own projects.
       </>
     ),
